[package]
name = "clawctl"
version = "0.1.0"
authors = ["Moritz Borcherding <moritz.borcherding@web.de>"]
edition = "2018"
description = "ZeroClaw agent orchestration tool - forked from rustysd"

[lib]
name = "clawctl"
path = "src/lib.rs"

[[bin]]
name = "clawctl"
path = "src/bin/clawctl.rs"

[[bin]]
name = "rsdctl"
path = "src/bin/rsdctl.rs"

[[bin]]
name = "testservice"
path = "src/bin/testservice.rs"

[[bin]]
name = "testserviceclient"
path = "src/bin/testserviceclient.rs"

[dependencies]
signal-hook = "0.3"
libc = "0.2"
nix = "0.26"
log = "0.4"
fern = "0.6"
chrono = "0.4"
threadpool = "1.8"
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
toml = "0.7"
dbus = {version = "0.9", optional = true}
shlex = "1.1"
clap = { version = "4.1", features = ["derive"] }
shmemfdrs = "0.1"
which = "4.4"

[features]
dbus_support = ["dbus"]
linux_eventfd = []
cgroups = []
